--- a/.env
+++ b/.env
@@ -31,5 +31,5 @@ DATABASE_URL=mysql://root:root@127.0.0.1:8889/project_manager
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-JWT_PASSPHRASE=Test
+JWT_PASSPHRASE=Mat0521134
 ###< lexik/jwt-authentication-bundle ###
