--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 
 ###> symfony/framework-bundle ###
+/.env
 /.env.local
 /.env.local.php
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
+/config/packages/lexik_jwt_authentication.yaml
 /public/bundles/
 /var/
 /vendor/
