--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "friendsofsymfony/rest-bundle": "^2.6",
         "jms/serializer-bundle": "^2.4",
         "lexik/jwt-authentication-bundle": "^2.6",
+        "sensio/framework-extra-bundle": "^5.5",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
@@ -16,6 +17,7 @@
         "symfony/maker-bundle": "^1.14",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "4.4.*",
+        "symfony/twig-bundle": "4.4.*",
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
