--- a/config/services.yaml
+++ b/config/services.yaml
@@ -26,16 +26,19 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
+#sensio_framework_extra:
+#    request: { converters: true }
+
 fos_rest:
     view:
-        formats:
-            json: true
-            xml: false
-            rss: false
+        formats: {json: true, xml: false, rss: false}
+        view_response_listener: true
     body_listener: true
-    format_listener:
+    serializer:
+        serialize_null: true
+    body_converter:
         enabled: true
+    format_listener:
         rules:
-            - { path: '^/', priorities: ['json'], fallback_format: 'json' }
-    routing_loader:
-            default_format: json
+            - { path: '^/api/', priorities: ['json'], fallback_format: 'json' }
+    
